# dumont-core

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
cloud/: __init__.py  cli.py  config.py  gpu_lifecycle.py  quick.py
dumont/: __init__.py
dumont/llm/: manager.py  tunnel.py
dumont/llm/providers/: ollama.py  openrouter.py
dumont_core/: __init__.py  cloud.py  llm.py  testing.py
dumont_core/cloud/: __init__.py  profiles.py  vastai.py
dumont_core/llm/: __init__.py  dedicated.py  gateway.py  manager.py
dumont_core/llm/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py  openrouter.py
dumont_core/testing/: __init__.py  ui_analyzer.py  unified_runner.py  utils.py
dumont_core/testing/execution/: __init__.py  playwright_executor.py  results_consolidator.py
dumont_core/testing/exploration/: base_explorer.py  discovery_merger.py  playwright_explorer.py
dumont_core/testing/models/: __init__.py
llm/: __init__.py  dedicated.py  gateway.py  manager.py
llm/providers/: __init__.py  anthropic.py  factory.py  ollama.py  openai.py  openrouter.py
testing/: README.md  __init__.py  install.sh  ui_analyzer.py  unified_runner.py  utils.py
testing/execution/: __init__.py  base_executor.py  browseruse_executor.py  playwright_executor.py  results_consolidator.py
testing/exploration/: __init__.py  base_explorer.py  browseruse_explorer.py  discovery_merger.py  playwright_explorer.py
testing/models/: __init__.py  discovery.py  test_result.py  unified_plan.py
tests/: test_integration.py
